--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <li>Python</li>
                 <li>C</li>
                 <li>C++</li>
+                <li>Java</li>
             </ul>
             
         </div>
