--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="col-12 col-sm-6">
             <h3>Introduction</h3>
-            <p>I am a self-taught programmer and web hacker.</p>
+            <p>I am a self-taught programmer and hacker.</p>
             <h3>Interests</h3>
             <p>Apart from tech, I also love to read books related to:</p>
             <ul>
