--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OKAKX</title>
-    <link href="bootstrap@5.3.2-css.css" rel="stylesheet">
-    <script src="bootstrap@5.3.2-js.js"></script>
+    <link href="/bootstrap@5.3.2-css.css" rel="stylesheet">
+    <script src="/bootstrap@5.3.2-js.js"></script>
     <style>
         /* Apply CSS for limiting max-width of the image */
         .img-container {
