--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OKAKX</title>
-    <link href="/bootstrap@5.3.2-css.css" rel="stylesheet">
-    <script src="/bootstrap@5.3.2-js.js"></script>
+    <link href="bootstrap/bootstrap@5.3.2-css.css" rel="stylesheet">
+    <script src="bootstrap/bootstrap@5.3.2-js.js"></script>
     <style>
         /* Apply CSS for limiting max-width of the image */
         .img-container {
@@ -33,7 +33,7 @@
         </div>
         <div class="row ml-5 mr-5 mb-3">
             <div class="col text-center img-container"> <!-- Wrap the image in a container -->
-                <img src="/Cherry_Resort_inside_Temi_Tea_Garden,_Namchi,_Sikkim(2).jpg"
+                <img src="images/Cherry_Resort_inside_Temi_Tea_Garden,_Namchi,_Sikkim(2).jpg"
                     class="img-fluid">
             </div>
         </div>
