--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-color">
+    <nav class="navbar navbar-expand-lg bg-color" data-bs-theme="dark">
         <div class="container" id="home">
             <a class="navbar-brand text-white" href="#">OKAKX</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
