--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     <section class="bg-main bg-color hero-section">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-lg-6 col-sm-12  d-flex flex-column justify-content-center align-items-start">
+                <div class="col-12 col-lg-6 col-sm-12   d-flex flex-column justify-content-center align-items-start">
                     <h1 class="text-capitalize fw-bolder text-white">Welcome to my web page</h1>
                     <p class="mt-3 mb-5 para-width text-light-grey">Lorem ipsum dolor sit amet consectetur adipisicing
                         elit. Quidem soluta dolores rerum natus earum nulla aperiam quasi, porro impedit commodi
                         laboriosam magnam, libero ad? Dolore error quasi eius reprehenderit sit.</p>
-                    <div class="text-center w-100 text-md-start mb-5">
-                        <button class="btn btn-primary px-5 py-2">Contact Us</button>
+                    <div class="text-center w-100 text-md-start">
+                        <button class="btn btn-primary px-5 py-2 mb-5">Contact Us</button>
 
                     </div>
                 </div>
@@ -81,7 +81,7 @@
             <h2 class="common-heading fw-bolder text-capitalize">What we will do for your <br>business</h2>
             <hr class="w-25 mx-auto">
             <div class="container mt-5">
-                <div class="row">
+                <div class="row g-5">
                     <div class="col-12 col-lg-4 col-md-12">
                         <div class="text-center card-box rounded-2 p-5">
                             <img class="img-fluid" width="200px"
@@ -154,11 +154,94 @@
                         elit. Quidem soluta dolores rerum natus earum nulla aperiam quasi, porro impedit commodi
                         laboriosam magnam, libero ad? Dolore error quasi eius reprehenderit sit.</p>
                 </div>
-                
+
             </div>
         </div>
     </section>
     <!--Digital product showcase-->
+
+    <!--projects section-->
+    <section class="common-section mb-5 pt-5 bg-color" id="projects">
+        <div class="container text-center common-title fw-bold">
+            <h2 class="common-heading fw-bolder text-white text-capitalize">My Projects<br>and other works</h2>
+            <hr class="w-25 mx-auto">
+        </div>
+
+        <div id="carouselExampleIndicators" class="carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active pb-5">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12 d-flex flex-column align-items-center justify-content-center">
+                                <div class="card p-3 mb-5" style="width: 18rem;">
+                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuDkrLu65ZSAzbVTNRvFaxRiDomX0zKxlWrQ"
+                                        class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card's content.</p>
+                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item pb-5">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12 d-flex flex-column align-items-center justify-content-center">
+                                <div class="card p-3 mb-5" style="width: 18rem;">
+                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuDkrLu65ZSAzbVTNRvFaxRiDomX0zKxlWrQ" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card's content.</p>
+                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item pb-5">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12 d-flex flex-column align-items-center justify-content-center">
+                                <div class="card p-3 mb-5" style="width: 18rem;">
+                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuDkrLu65ZSAzbVTNRvFaxRiDomX0zKxlWrQ" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card's content.</p>
+                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+    </section>
+    <!--projects section ends-->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
