--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                         <a class="nav-link" href="#services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
 
@@ -161,9 +161,9 @@
     <!--Digital product showcase-->
 
     <!--projects section-->
-    <section class="common-section mb-5 pt-5 bg-color" id="projects">
+    <section class="common-section pt-5 bg-color" id="projects">
         <div class="container text-center common-title fw-bold">
-            <h2 class="common-heading fw-bolder text-white text-capitalize">My Projects<br>and other works</h2>
+            <h2 class="common-heading fw-bolder text-white text-capitalize">My Projects and other<br>works</h2>
             <hr class="w-25 mx-auto">
         </div>
 
@@ -200,7 +200,8 @@
                         <div class="row">
                             <div class="col-12 d-flex flex-column align-items-center justify-content-center">
                                 <div class="card p-3 mb-5" style="width: 18rem;">
-                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuDkrLu65ZSAzbVTNRvFaxRiDomX0zKxlWrQ" class="card-img-top" alt="...">
+                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuDkrLu65ZSAzbVTNRvFaxRiDomX0zKxlWrQ"
+                                        class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">Some quick example text to build on the card title and make
@@ -217,7 +218,8 @@
                         <div class="row">
                             <div class="col-12 d-flex flex-column align-items-center justify-content-center">
                                 <div class="card p-3 mb-5" style="width: 18rem;">
-                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuDkrLu65ZSAzbVTNRvFaxRiDomX0zKxlWrQ" class="card-img-top" alt="...">
+                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuDkrLu65ZSAzbVTNRvFaxRiDomX0zKxlWrQ"
+                                        class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">Some quick example text to build on the card title and make
@@ -243,6 +245,50 @@
     </section>
     <!--projects section ends-->
 
+    <!-- contact section starts -->
+    <section class="common-section contact-section pt-5" id="contact">
+        <div class="container text-center common-title fw-bold">
+            <h2 class="common-heading fw-bolder text-capitalize">Contact Us</h2>
+            <hr class="w-25 mx-auto">
+        </div>
+        <div class="container">
+            <div class="form-section mx-auto">
+                <form>
+                    <div class="mb-3">
+                        <div class="row">
+                            <div class="col-lg-6 col-12">
+                                <label for="exampleFormControlInput1" class="form-label">First Name</label>
+                                <input type="text" class="form-control" id="exampleFormControlInput1"
+                                    placeholder="First name">
+                            </div>
+                            <div class="col-lg-6 col-12">
+                                <label for="exampleFormControlInput1" class="form-label">Last Name</label>
+                                <input type="text" class="form-control" id="exampleFormControlInput1"
+                                    placeholder="Last name">
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1"
+                            placeholder="name@example.com">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+        </div>
+    </section>
+    <!-- contact section ends -->
+
+
+    <!-- footer section start -->
+
+    <!-- footer section end -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
