--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-color" data-bs-theme="dark">
-        <div class="container" id="home">
+    <nav class="navbar fixed-top navbar-expand-lg bg-color" data-bs-theme="dark">
+        <div class="container">
             <a class="navbar-brand text-white" href="#">OKAKX</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,7 +27,7 @@
                         <a class="nav-link" aria-current="page" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
+                        <a class="nav-link" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#projects">Projects</a>
@@ -41,16 +41,14 @@
         </div>
     </nav>
     <!-- hero section starts-->
-    <section class="bg-main bg-color hero-section">
+    <section class="bg-main bg-color hero-section" id="home">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-6 col-sm-12   d-flex flex-column justify-content-center align-items-start">
-                    <h1 class="text-capitalize fw-bolder text-white">Welcome to my web page</h1>
-                    <p class="mt-3 mb-5 para-width text-light-grey">Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit. Quidem soluta dolores rerum natus earum nulla aperiam quasi, porro impedit commodi
-                        laboriosam magnam, libero ad? Dolore error quasi eius reprehenderit sit.</p>
+                    <h1 class="text-capitalize fw-bolder text-white">Tarun Anand</h1>
+                    <p class="mt-3 mb-5 para-width text-light-grey">My name is Tarun Anand. I am a self-taught front-end-developer and a hacker from India.</p>
                     <div class="text-center w-100 text-md-start">
-                        <button class="btn btn-primary px-5 py-2 mb-5">Contact Us</button>
+                        <button class="btn btn-primary px-5 py-2 mb-5">Resume</button>
 
                     </div>
                 </div>
@@ -76,20 +74,18 @@
     <!-- hero section ends-->
 
     <!-- skill section start -->
-    <section class="services-section" id="services">
+    <section class="services-section" id="skills">
         <div class="container text-center common-title fw-bold">
-            <h2 class="common-heading fw-bolder text-capitalize">What we will do for your <br>business</h2>
+            <h2 class="common-heading fw-bolder text-capitalize">My Skills</h2>
             <hr class="w-25 mx-auto">
             <div class="container mt-5">
                 <div class="row g-5">
                     <div class="col-12 col-lg-4 col-md-12">
-                        <div class="text-center card-box rounded-2 p-5">
+                        <div class="text-center card-box rounded-2 p-5 custom-card">
                             <img class="img-fluid" width="200px"
                                 src="https://lh3.googleusercontent.com/NB3yk47eYP5qBjtrelhONpUWM9aRTj9req99aqx8Y3xFgUtDnGTkUwTKavLzpyjyHt_kTRVcm7NAM3ZM_GQer1AzUdRnf2X7s5ffasuOIGgyo5PH4sk4bRdllMhT69orssC1XILPoN0esuyPptBb780">
-                            <h5 class="my-3 fw-normal">Web-Page Building</h5>
-                            <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus quidem
-                                illum expedita quibusdam nesciunt modi ex beatae? Voluptatum blanditiis perferendis,
-                                adipisci cupiditate, possimus rem sequi repellat nostrum recusandae reiciendis cum?</p>
+                            <h5 class="my-3 fw-normal">Front-End-Web Developer</h5>
+                            <p class="mb-5">HTML<br>CSS<br>JavaScript<br>Bootstrap</p>
                             <div class="d-flex justify-content-center align-items-center">
                                 <a href="#service"
                                     class="icon-span rounded-circle d-flex justify-content-center align-items-center">
@@ -100,13 +96,11 @@
                         </div>
                     </div>
                     <div class="col-12 col-lg-4 col-md-12">
-                        <div class="text-center card-box rounded-2 p-5">
+                        <div class="text-center card-box rounded-2 p-5 custom-card">
                             <img class="img-fluid" width="200px"
                                 src="https://lh3.googleusercontent.com/NB3yk47eYP5qBjtrelhONpUWM9aRTj9req99aqx8Y3xFgUtDnGTkUwTKavLzpyjyHt_kTRVcm7NAM3ZM_GQer1AzUdRnf2X7s5ffasuOIGgyo5PH4sk4bRdllMhT69orssC1XILPoN0esuyPptBb780">
-                            <h5 class="my-3 fw-normal">Content Marketing</h5>
-                            <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus quidem
-                                illum expedita quibusdam nesciunt modi ex beatae? Voluptatum blanditiis perferendis,
-                                adipisci cupiditate, possimus rem sequi repellat nostrum recusandae reiciendis cum?</p>
+                            <h5 class="my-3 fw-normal">Hacking</h5>
+                            <p class="mb-5">Vulnerability Assessment<br>Web Application Security<br>Penetration Testing<br>Networking<br>Programming : Python , C , C++<br>Operating System Knowledge</p>
                             <div class="d-flex justify-content-center align-items-center">
                                 <a href="#service"
                                     class="icon-span rounded-circle d-flex justify-content-center align-items-center">
@@ -117,13 +111,11 @@
                         </div>
                     </div>
                     <div class="col-12 col-lg-4 col-md-12">
-                        <div class="text-center card-box rounded-2 p-5">
+                        <div class="text-center card-box rounded-2 p-5 custom-card">
                             <img class="img-fluid" width="200px"
                                 src="https://lh3.googleusercontent.com/NB3yk47eYP5qBjtrelhONpUWM9aRTj9req99aqx8Y3xFgUtDnGTkUwTKavLzpyjyHt_kTRVcm7NAM3ZM_GQer1AzUdRnf2X7s5ffasuOIGgyo5PH4sk4bRdllMhT69orssC1XILPoN0esuyPptBb780">
-                            <h5 class="my-3 fw-normal">Website Security Analysis</h5>
-                            <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus quidem
-                                illum expedita quibusdam nesciunt modi ex beatae? Voluptatum blanditiis perferendis,
-                                adipisci cupiditate, possimus rem sequi repellat nostrum recusandae reiciendis cum?</p>
+                            <h5 class="my-3 fw-normal">Programming</h5>
+                            <p class="mb-5">C<br>C++<br>Python<br>Java</p>
                             <div class="d-flex justify-content-center align-items-center">
                                 <a href="#service"
                                     class="icon-span rounded-circle d-flex justify-content-center align-items-center">
@@ -149,10 +141,13 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 col-sm-12  d-flex flex-column justify-content-center align-items-start">
-                    <h2 class="text-capitalize fw-bolder text-white">Build nice and secure digital products</h2>
-                    <p class="mt-3 mb-5 para-width text-light-grey">Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit. Quidem soluta dolores rerum natus earum nulla aperiam quasi, porro impedit commodi
-                        laboriosam magnam, libero ad? Dolore error quasi eius reprehenderit sit.</p>
+                    <h2 class="text-capitalize fw-bolder text-white">Other Interests</h2>
+                    <p class="mt-3 para-width text-light-grey">Apart from tech, I also love to read books related to:</p>
+                    <ul class="mb-5 mt-2 text-light-grey">
+                        <li>Philosophy</li>
+                        <li>Psychology</li>
+                        <li>Other non fictions</li>
+                    </ul>
                 </div>
 
             </div>
