--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 col-sm-12  d-flex flex-column justify-content-center align-items-start">
-                    <h2 class="text-capitalize fw-bolder text-white">Other Interests</h2>
+                    <h2 class="mt-3 text-capitalize fw-bolder text-white">Other Interests</h2>
                     <p class="mt-3 para-width text-light-grey">Apart from tech, I also love to read books related to:</p>
                     <ul class="mb-5 mt-2 text-light-grey">
                         <li>Philosophy</li>
