--- a/index.html
+++ b/index.html
@@ -176,13 +176,12 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-12 d-flex flex-column align-items-center justify-content-center">
-                                <div class="card p-3 mb-5" style="width: 18rem;">
+                                <div class="card p-3 mb-5 custom-card2" style="width: 18rem;">
                                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuDkrLu65ZSAzbVTNRvFaxRiDomX0zKxlWrQ"
                                         class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
+                                        <h5 class="card-title">Python Script - Insta-username-Locator</h5>
+                                        <p class="card-text">Reveals the country name of target account (private or public) of Instagram (private or public).</p>
                                         <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
                                 </div>
@@ -194,13 +193,12 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-12 d-flex flex-column align-items-center justify-content-center">
-                                <div class="card p-3 mb-5" style="width: 18rem;">
+                                <div class="card p-3 mb-5 custom-card2" style="width: 18rem;">
                                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuDkrLu65ZSAzbVTNRvFaxRiDomX0zKxlWrQ"
                                         class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
+                                        <h5 class="card-title">Personal Portfolio WebPage</h5>
+                                        <p class="card-text">A WebPage built with the use of Bootstrap to showcase my skils and projects.</p>
                                         <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
                                 </div>
@@ -212,13 +210,12 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-12 d-flex flex-column align-items-center justify-content-center">
-                                <div class="card p-3 mb-5" style="width: 18rem;">
+                                <div class="card p-3 mb-5 custom-card2" style="width: 18rem;">
                                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuDkrLu65ZSAzbVTNRvFaxRiDomX0zKxlWrQ"
                                         class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
+                                        <h5 class="card-title">Web Application Hacking</h5>
+                                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam maiores, nihil explic</p>
                                         <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
                                 </div>
