--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="col-12 col-lg-6 col-sm-12   d-flex flex-column justify-content-center align-items-start">
                     <h1 class="text-capitalize fw-bolder text-white">Tarun Anand</h1>
-                    <p class="mt-3 mb-5 para-width text-light-grey">My name is Tarun Anand. I am a self-taught front-end-developer and a hacker from India.</p>
+                    <p class="mt-3 mb-5 para-width text-light-grey">My name is Tarun Anand. I am a self-taught programmer and a hacker from India.</p>
                     <div class="text-center w-100 text-md-start">
                         <button class="btn btn-primary px-5 py-2 mb-5">Resume</button>
 
@@ -156,10 +156,10 @@
     <!--Digital product showcase-->
 
     <!--projects section-->
-    <section class="common-section pt-5 bg-color" id="projects">
-        <div class="container text-center common-title fw-bold">
+    <section class="common-section pt-5 bg-color" >
+        <div class="container text-center common-title fw-bold" id="projects">
             <h2 class="common-heading fw-bolder text-white text-capitalize">My Projects and other<br>works</h2>
-            <hr class="w-25 mx-auto">
+            <hr class="w-25 mx-auto text-white">
         </div>
 
         <div id="carouselExampleIndicators" class="carousel slide">
@@ -176,12 +176,12 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-12 d-flex flex-column align-items-center justify-content-center">
-                                <div class="card p-3 mb-5 custom-card2" style="width: 18rem;">
-                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuDkrLu65ZSAzbVTNRvFaxRiDomX0zKxlWrQ"
+                                <div class="card p-3 mb-3 custom-card2" style="width: 18rem;">
+                                    <img src="https://0xtarun.github.io/me/images/Screenshot%20from%202023-11-06%2011-31-48.png"
                                         class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Python Script - Insta-username-Locator</h5>
-                                        <p class="card-text">Reveals the country name of target account (private or public) of Instagram (private or public).</p>
+                                        <h5 class="card-title">Python Script - Insta-Account-Locator</h5>
+                                        <p class="card-text">Reveals the country name of target account (private or public) of Instagram</p>
                                         <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
                                 </div>
@@ -193,8 +193,8 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-12 d-flex flex-column align-items-center justify-content-center">
-                                <div class="card p-3 mb-5 custom-card2" style="width: 18rem;">
-                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuDkrLu65ZSAzbVTNRvFaxRiDomX0zKxlWrQ"
+                                <div class="card p-3 mb-3 custom-card2" style="width: 18rem;">
+                                    <img src="https://0xtarun.github.io/me/images/Screenshot%20from%202023-11-06%2011-39-58.png"
                                         class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Personal Portfolio WebPage</h5>
@@ -210,7 +210,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-12 d-flex flex-column align-items-center justify-content-center">
-                                <div class="card p-3 mb-5 custom-card2" style="width: 18rem;">
+                                <div class="card p-3 mb-3 custom-card2" style="width: 18rem;">
                                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuDkrLu65ZSAzbVTNRvFaxRiDomX0zKxlWrQ"
                                         class="card-img-top" alt="...">
                                     <div class="card-body">
