--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
     <!--Digital product showcase-->
 
     <!--projects section-->
-    <section class="common-section pt-5 bg-color" >
-        <div class="container text-center common-title fw-bold" id="projects">
+    <section class="common-section pt-5 bg-color" id="projects" >
+        <div class="container text-center common-title fw-bold">
             <h2 class="common-heading fw-bolder text-white text-capitalize">My Projects and other<br>works</h2>
             <hr class="w-25 mx-auto text-white">
         </div>
