--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             <div class="row">
                 <div class="col-12 col-lg-6 col-sm-12   d-flex flex-column justify-content-center align-items-start">
                     <h1 class="text-capitalize fw-bolder text-white">Tarun Anand</h1>
-                    <p class="mt-3 mb-5 para-width text-light-grey">My name is Tarun Anand. I am a self-taught programmer and a hacker from India.</p>
+                    <p class="mt-3 mb-5 para-width text-light-grey">My name is Tarun Anand. I am a self-taught
+                        programmer and a hacker from India.</p>
                     <div class="text-center w-100 text-md-start">
                         <button class="btn btn-primary px-5 py-2 mb-5">Resume</button>
 
@@ -74,55 +75,60 @@
     <!-- hero section ends-->
 
     <!-- skill section start -->
-    <section class="services-section" id="skills">
+    <section class="services-section bg-color text-white" id="skills">
         <div class="container text-center common-title fw-bold">
             <h2 class="common-heading fw-bolder text-capitalize">My Skills</h2>
             <hr class="w-25 mx-auto">
             <div class="container mt-5">
                 <div class="row g-5">
                     <div class="col-12 col-lg-4 col-md-12">
-                        <div class="text-center card-box rounded-2 p-5 custom-card">
-                            <img class="img-fluid" width="200px"
-                                src="https://lh3.googleusercontent.com/NB3yk47eYP5qBjtrelhONpUWM9aRTj9req99aqx8Y3xFgUtDnGTkUwTKavLzpyjyHt_kTRVcm7NAM3ZM_GQer1AzUdRnf2X7s5ffasuOIGgyo5PH4sk4bRdllMhT69orssC1XILPoN0esuyPptBb780">
-                            <h5 class="my-3 fw-normal">Front-End-Web Developer</h5>
-                            <p class="mb-5">HTML<br>CSS<br>JavaScript<br>Bootstrap</p>
-                            <div class="d-flex justify-content-center align-items-center">
-                                <a href="#service"
-                                    class="icon-span rounded-circle d-flex justify-content-center align-items-center">
-                                    <i class="fa-solid fa-arrow-right"></i>
-                                </a>
+                        <div class="card w-75 mb-3 rounded-2">
+                            <div class="card-body custom-font">
+                                <img class="img-fluid custom-img"
+                                    src="https://www.creativeitinstitute.com/images/course/course_1663052056.jpg">
+                                <h5 class="card-title">Web Development</h5>
+                                <p class="card-text fw-normal">HTML<br>CSS<br>JavaScript<br>Bootstrap</p>
+                                <!-- <div class="d-flex justify-content-center align-items-center">
+                                    <a href="#service"
+                                        class="icon-span rounded-circle d-flex justify-content-center align-items-center">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div> -->
                             </div>
-
                         </div>
                     </div>
                     <div class="col-12 col-lg-4 col-md-12">
-                        <div class="text-center card-box rounded-2 p-5 custom-card">
-                            <img class="img-fluid" width="200px"
-                                src="https://lh3.googleusercontent.com/NB3yk47eYP5qBjtrelhONpUWM9aRTj9req99aqx8Y3xFgUtDnGTkUwTKavLzpyjyHt_kTRVcm7NAM3ZM_GQer1AzUdRnf2X7s5ffasuOIGgyo5PH4sk4bRdllMhT69orssC1XILPoN0esuyPptBb780">
-                            <h5 class="my-3 fw-normal">Hacking</h5>
-                            <p class="mb-5">Vulnerability Assessment<br>Web Application Security<br>Penetration Testing<br>Networking<br>Programming : Python , C , C++<br>Operating System Knowledge</p>
-                            <div class="d-flex justify-content-center align-items-center">
-                                <a href="#service"
-                                    class="icon-span rounded-circle d-flex justify-content-center align-items-center">
-                                    <i class="fa-solid fa-arrow-right"></i>
-                                </a>
+                        <div class="card w-75 mb-3 rounded-2">
+                            <div class="card-body">
+                                <img class="img-fluid custom-img"
+                                    src="https://img.freepik.com/free-vector/laptop-with-program-code-isometric-icon-software-development-programming-applications-dark-neon_39422-971.jpg?size=626&ext=jpgs">
+                                <h5 class="card-title">Programming</h5>
+                                <p class="card-text fw-normal">C<br>C++<br>Python<br>Java</p>
+                                <!-- <div class="d-flex justify-content-center align-items-center">
+                                    <a href="#service"
+                                        class="icon-span rounded-circle d-flex justify-content-center align-items-center">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div> -->
                             </div>
-
                         </div>
                     </div>
                     <div class="col-12 col-lg-4 col-md-12">
-                        <div class="text-center card-box rounded-2 p-5 custom-card">
-                            <img class="img-fluid" width="200px"
-                                src="https://lh3.googleusercontent.com/NB3yk47eYP5qBjtrelhONpUWM9aRTj9req99aqx8Y3xFgUtDnGTkUwTKavLzpyjyHt_kTRVcm7NAM3ZM_GQer1AzUdRnf2X7s5ffasuOIGgyo5PH4sk4bRdllMhT69orssC1XILPoN0esuyPptBb780">
-                            <h5 class="my-3 fw-normal">Programming</h5>
-                            <p class="mb-5">C<br>C++<br>Python<br>Java</p>
-                            <div class="d-flex justify-content-center align-items-center">
-                                <a href="#service"
-                                    class="icon-span rounded-circle d-flex justify-content-center align-items-center">
-                                    <i class="fa-solid fa-arrow-right"></i>
-                                </a>
+                        <div class="card w-75 mb-3 rounded-2">
+                            <div class="card-body">
+                                <img class="img-fluid custom-img"
+                                    src="https://academy.avast.com/hs-fs/hubfs/New_Avast_Academy/Hackers/Hacker-Hero-a1.png?width=1800&name=Hacker-Hero-a1.png">
+                                <h5 class="card-title">Hacking</h5>
+                                <p class="card-text fw-normal">Web Application Security<br>Penetration
+                                    Testing<br>Networking<br>Operating System Knowledge
+                                </p>
+                                <!-- <div class="d-flex justify-content-center align-items-center">
+                                    <a href="#service"
+                                        class="icon-span rounded-circle d-flex justify-content-center align-items-center">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div> -->
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -142,7 +148,8 @@
                 </div>
                 <div class="col-12 col-lg-6 col-sm-12  d-flex flex-column justify-content-center align-items-start">
                     <h2 class="mt-3 text-capitalize fw-bolder text-white">Other Interests</h2>
-                    <p class="mt-3 para-width text-light-grey">Apart from tech, I also love to read books related to:</p>
+                    <p class="mt-3 para-width text-light-grey">Apart from tech, I also love to read books related to:
+                    </p>
                     <ul class="mb-5 mt-2 text-light-grey">
                         <li>Philosophy</li>
                         <li>Psychology</li>
@@ -156,7 +163,7 @@
     <!--Digital product showcase-->
 
     <!--projects section-->
-    <section class="common-section pt-5 bg-color" id="projects" >
+    <section class="common-section pt-5 bg-color" id="projects">
         <div class="container text-center common-title fw-bold">
             <h2 class="common-heading fw-bolder text-white text-capitalize">My Projects and other<br>works</h2>
             <hr class="w-25 mx-auto text-white">
@@ -181,8 +188,9 @@
                                         class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Python Script - Insta-Account-Locator</h5>
-                                        <p class="card-text">Reveals the country name of target account (private or public) of Instagram</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        <p class="card-text">Reveals the country name of target account (private or
+                                            public) of Instagram</p>
+                                        <a href="#" target="_blank" class="btn btn-primary">Visit</a>
                                     </div>
                                 </div>
                             </div>
@@ -198,8 +206,9 @@
                                         class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Personal Portfolio WebPage</h5>
-                                        <p class="card-text">A WebPage built with the use of Bootstrap to showcase my skils and projects.</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        <p class="card-text">A WebPage built with the use of Bootstrap to showcase my
+                                            skils and projects.</p>
+                                        <a href="/me" target="_blank" class="btn btn-primary">Visit</a>
                                     </div>
                                 </div>
                             </div>
@@ -211,12 +220,12 @@
                         <div class="row">
                             <div class="col-12 d-flex flex-column align-items-center justify-content-center">
                                 <div class="card p-3 mb-3 custom-card2" style="width: 18rem;">
-                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuDkrLu65ZSAzbVTNRvFaxRiDomX0zKxlWrQ"
+                                    <img src="https://raw.githubusercontent.com/0xtarun/me/main/images/numberGuessingGameSS.png"
                                         class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Web Application Hacking</h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam maiores, nihil explic</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        <h5 class="card-title">Game : Guess the number</h5>
+                                        <p class="card-text">Number guessing game (still not completed yet)</p>
+                                        <a href="/numberGuessingGame" target="_blank" class="btn btn-primary">Visit</a>
                                     </div>
                                 </div>
                             </div>
@@ -238,40 +247,32 @@
     <!--projects section ends-->
 
     <!-- contact section starts -->
-    <section class="common-section contact-section pt-5" id="contact">
+    <section class="common-section contact-section bg-color text-white pt-5" id="contact">
         <div class="container text-center common-title fw-bold">
-            <h2 class="common-heading fw-bolder text-capitalize">Contact Us</h2>
+            <h2 class="common-heading fw-bolder text-capitalize">Contacts</h2>
             <hr class="w-25 mx-auto">
         </div>
         <div class="container">
-            <div class="form-section mx-auto">
-                <form>
-                    <div class="mb-3">
-                        <div class="row">
-                            <div class="col-lg-6 col-12">
-                                <label for="exampleFormControlInput1" class="form-label">First Name</label>
-                                <input type="text" class="form-control" id="exampleFormControlInput1"
-                                    placeholder="First name">
-                            </div>
-                            <div class="col-lg-6 col-12">
-                                <label for="exampleFormControlInput1" class="form-label">Last Name</label>
-                                <input type="text" class="form-control" id="exampleFormControlInput1"
-                                    placeholder="Last name">
-                            </div>
-
-                        </div>
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <div class="mb-5 d-flex justify-content-center align-items-center">
+                        <h5 class="me-3">Instagram </h5>
+                        <a href="https://www.instagarm.com/okakx" target="_blank"
+                            class="icon-span rounded-circle d-flex justify-content-center align-items-center">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
                     </div>
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1"
-                            placeholder="name@example.com">
+                </div>
+                <div class="col-12 col-lg-6">
+                    
+                    <div class="d-flex justify-content-center align-items-center">
+                        <h5 class="me-3">Telegram</h5>
+                        <a href="https://www.t.me/okakx" target="_blank"
+                            class="icon-span rounded-circle d-flex justify-content-center align-items-center">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
                     </div>
-                    <div class="mb-3">
-                        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
+                </div>
             </div>
         </div>
     </section>
