--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
         <div class="container text-center common-title fw-bold">
             <h2 class="common-heading fw-bolder text-capitalize">My Skills</h2>
             <hr class="w-25 mx-auto">
-            <div class="container mt-5">
-                <div class="row g-5">
+            <div class="container d-flex justify-content-center align-items-center mt-5">
+                <div class="row">
                     <div class="col-12 col-lg-4 col-md-12">
-                        <div class="card w-75 mb-3 rounded-2">
+                        <div class="card w-75 mx-auto mb-3 rounded-2">
                             <div class="card-body custom-font">
                                 <img class="img-fluid custom-img"
                                     src="https://www.creativeitinstitute.com/images/course/course_1663052056.jpg">
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-lg-4 col-md-12">
-                        <div class="card w-75 mb-3 rounded-2">
+                        <div class="card w-75 mb-3 mx-auto rounded-2">
                             <div class="card-body">
                                 <img class="img-fluid custom-img"
                                     src="https://img.freepik.com/free-vector/laptop-with-program-code-isometric-icon-software-development-programming-applications-dark-neon_39422-971.jpg?size=626&ext=jpgs">
@@ -114,7 +114,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-lg-4 col-md-12">
-                        <div class="card w-75 mb-3 rounded-2">
+                        <div class="card w-75 mb-3 mx-auto rounded-2">
                             <div class="card-body">
                                 <img class="img-fluid custom-img"
                                     src="https://academy.avast.com/hs-fs/hubfs/New_Avast_Academy/Hackers/Hacker-Hero-a1.png?width=1800&name=Hacker-Hero-a1.png">
