--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <div class="card w-75 mx-auto mb-3 rounded-2">
                             <div class="card-body custom-font">
                                 <img class="img-fluid custom-img"
-                                    src="https://www.creativeitinstitute.com/images/course/course_1663052056.jpg">
+                                    src="https://c4.wallpaperflare.com/wallpaper/632/34/549/technology-monitor-alpha-coders-binary-wallpaper-preview.jpg">
                                 <h5 class="card-title">Web Development</h5>
                                 <p class="card-text fw-normal">HTML<br>CSS<br>JavaScript<br>Bootstrap</p>
                                 <!-- <div class="d-flex justify-content-center align-items-center">
