--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" href="#contact">Contacts</a>
                     </li>
                 </ul>
 
