--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                     <h1 class="text-capitalize fw-bolder text-white">Tarun Anand</h1>
                     <p class="mt-3 mb-5 para-width text-light-grey">My name is Tarun Anand. I am a self-taught
                         programmer and a hacker from India.</p>
-<!--                     <div class="text-center w-100 text-md-start">
+                    <div class="text-center w-100 text-md-start">
                         <button class="btn btn-primary px-5 py-2 mb-5">Resume</button>
 
-                    </div> -->
+                    </div>
                 </div>
                 <div class="col-12 col-lg-6 col-sm-12">
                     <div class="text-center text-lg-end">
