--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <p class="mt-3 mb-5 para-width text-light-grey">My name is Tarun Anand. I am a self-taught
                         programmer and a hacker from India.</p>
                     <div class="text-center w-100 text-md-start">
-                        <button class="btn btn-primary px-5 py-2 mb-5">Resume</button>
+                        <button class="btn btn-primary px-5 py-2 mb-5">IDK</button>
 
                     </div>
                 </div>
