--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                     src="https://academy.avast.com/hs-fs/hubfs/New_Avast_Academy/Hackers/Hacker-Hero-a1.png?width=1800&name=Hacker-Hero-a1.png">
                                 <h5 class="card-title">Hacking</h5>
                                 <p class="card-text fw-normal">Web Application Security<br>Penetration
-                                    Testing<br>Networking<br>Operating System Knowledge
+                                    Testing<br>Networking<br>Linux
                                 </p>
                                 <!-- <div class="d-flex justify-content-center align-items-center">
                                     <a href="#service"
